--- a/.gitignore
+++ b/.gitignore
@@ -129,34 +129,40 @@ venv/
 ENV/
 env.bak/
 venv.bak/
+**/.env*
+**/secrets.*
+**/*secret*.*
+**/credential*.*
 
-# Spyder project settings
+# IDE and editor files
 .spyderproject
 .spyproject
-
-# Rope project settings
 .ropeproject
+.idea/
+.vscode/
+*.sublime-*
+*.swp
+.DS_Store
 
-# mkdocs documentation
+# Documentation
 /site
-
-# mypy
 .mypy_cache/
 .dmypy.json
 dmypy.json
-
-# Pyre type checker
 .pyre/
-
-# pytype static type analyzer
 .pytype/
 
 # Cython debug symbols
 cython_debug/
 
-# PyCharm
-#  JetBrains specific template is maintained in a separate JetBrains.gitignore that can
-#  be found at https://github.com/github/gitignore/blob/main/Global/JetBrains.gitignore
-#  and can be added to the global gitignore or merged into this file.  For a more nuclear
-#  option (not recommended) you can uncomment the following to ignore the entire idea folder.
-#.idea/
+# Rua Vertex Legal and Sensitive Content
+private_docs/
+**/private/
+**/confidential/
+**/*internal*.md
+**/*confidential*.md
+**/*secret*.md
+**/*contract*.md
+**/*agreement*.md
+**/commercial/*.md
+**/legal/*.md
