--- a/.gitignore
+++ b/.gitignore
@@ -32,10 +32,6 @@ MANIFEST
 *.manifest
 *.spec
 
-# Installer logs
-pip-log.txt
-pip-delete-this-directory.txt
-
 # Unit test / coverage reports
 htmlcov/
 .tox/
@@ -50,10 +46,6 @@ coverage.xml
 .hypothesis/
 .pytest_cache/
 cover/
-
-# Translations
-*.mo
-*.pot
 
 # Django stuff:
 *.log
@@ -71,21 +63,28 @@ instance/
 # Sphinx documentation
 docs/_build/
 
+# Installer logs
+pip-log.txt
+pip-delete-this-directory.txt
+
+# Additional packaging files
+pip-wheel-metadata/
 # PyBuilder
 .pybuilder/
 target/
-
-# Jupyter Notebook
-.ipynb_checkpoints
 
 # IPython
 profile_default/
 ipython_config.py
 
+# Translations
+*.mo
+*.pot
+
 # pyenv
 #   For a library or package, you might want to ignore these files since the code is
 #   intended to run in multiple environments; otherwise, check them in:
-# .python-version
+.python-version
 
 # pipenv
 #   According to pypa/pipenv#598, it is recommended to include Pipfile.lock in version control.
@@ -134,7 +133,10 @@ venv.bak/
 **/*secret*.*
 **/credential*.*
 
-# IDE and editor files
+# Jupyter Notebook
+.ipynb_checkpoints
+
+# PersonalIDE and editor files
 .spyderproject
 .spyproject
 .ropeproject
